# firestarter

./: .gitignore  .gitmodules  .justfile  CMakeLists.txt  Cargo.toml  LICENSE.md  README.md  justfile  skyrimse.ppj  vcpkg.json
data/: Firestarter_FLM.ini  firestarter.esp  firestarter_BOS_SWAP.ini
data/scripts/: Firestarter_Activator.pex  Firestarter_CampfireBurning.pex  Firestarter_DAK_Perk.pex  Firestarter_QuestEvents.pex
firestarter-esp/: RecordData.yaml
firestarter-esp/Activators/: FS_Acti_Campfire01.yaml  FS_Acti_Campfire01Land.yaml  FS_Acti_Campfire01_Ashes.yaml  FS_Acti_Campfire01_Burning.yaml  FS_Acti_Campfire01_Clean.yaml  FS_Acti_Campfire01_Dying.yaml  FS_Acti_Campfire01_Fueled.yaml  FS_Acti_Campfire01_Kindled.yaml  FS_Acti_Campfire01_Roaring.yaml
firestarter-esp/Cells/: GroupRecordData.yaml
firestarter-esp/FormLists/: GroupRecordData.yaml  Survival_WarmUpObjectsList.yaml
firestarter-esp/Furniture/: CraftingCookingPotSmNoHandle.yaml  FS_Furn_CookingStone.yaml  GroupRecordData.yaml  ccQDRSSE002_CampfireFurn.yaml
firestarter-esp/MoveableStatics/: C06FXfireBlueWithEmbersHeavy.yaml  Campfire01Burning.yaml  Campfire01LandBurning.yaml  Campfire01LandBurningCaveBaseGround02.yaml  Campfire01LandBurningCoastalBeach01.yaml  Campfire01LandBurningDirt01.yaml  Campfire01LandBurningFallForestDirt01.yaml  Campfire01LandBurningFieldGrass01.yaml  Campfire01LandBurningFrozenMarshDirtSlope01.yaml  Campfire01LandBurningPineForest01.yaml  Campfire01LandBurningReachDirt01.yaml  Campfire01LandBurningRiverBedEdge01.yaml  FS_Campfire_01_Ashes.yaml  (+23 more)
src/: lib.rs  main.cpp
(+86 files in other folders)
